5. Подсчет функции в диапазоне. [#408956]