@@ -7,24 +7,36 @@ import ru.job4j.collection.JobDescByPriority;
 import java.util.Arrays;
 import java.util.Comparator;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class Tester {
+    public static class Task {
+        private final String name;
+        private final long spent;
+
+        public Task(String name, long spent) {
+            this.name = name;
+            this.spent = spent;
+        }
+
+        @Override
+        public String toString() {
+            return "Task{" +
+                    "name='" + name + '\'' +
+                    ", spent=" + spent +
+                    '}';
+        }
+    }
+
     public static void main(String[] args) {
-        List<Job> jobs = Arrays.asList(
-                new Job("Fix bug", 1),
-                new Job("Fix bug", 4),
-                new Job("Fix bug", 2),
-                new Job("X task", 0)
+        List<Task> tasks = List.of(
+                new Task("Bug #1", 100),
+                new Task("Task #2", 100),
+                new Task("Bug #3", 100)
         );
-        jobs.sort(new JobDescByName().thenComparing(new JobDescByPriority()));
-        System.out.println(jobs);
-
-        Comparator<Job> compareName = Comparator.comparing(Job::getName);
-        Comparator<Job> comparePriority = Comparator.comparingInt(Job::getPriority);
-        Comparator<Job> combine = compareName.thenComparing(comparePriority);
-
-        jobs.sort(combine);
-
-        System.out.println(jobs);
+        List<Task> bugs = tasks.stream().filter(
+                task -> task.name.contains("Bug")
+        ).collect(Collectors.toList());
+        bugs.forEach(System.out::println);
     }
 }
